<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blackDarktheme"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/Main_text_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/main_titulo"
        android:textSize="30dp"
        android:textColor="@color/colorTextPrimary"
        />
    <TextView
        android:id="@+id/Main_text_Subtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_subtitulo"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="25dp"
        android:textColor="@color/colorTextPrimary"
        />
    <TextView
        android:id="@+id/Main_text_Texto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_texto1"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorTextPrimary"
        />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/qrcode96px"
        android:layout_gravity="center"/>

        <Button
            android:id="@+id/Main_btn_Escanear"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/botao_comum"
            android:gravity="center"
            android:text="@string/main_btn_escanear"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

    <TextView
        android:id="@+id/Main_text_Texto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_texto2"
        android:textSize="18dp"
        android:textColor="@color/colorTextPrimary"
        />
    <TextView
        android:id="@+id/Main_text_Texto3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_texto3"
        android:textSize="18dp"
        android:textColor="@color/colorTextPrimary"
        />

    <EditText
        android:id="@+id/Main_editText_Codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/plain_text"
        android:textSize="20dp"
        android:ems="10"
        android:hint="Digite o código"
        android:inputType="textPersonName"
        />

        <Button
            android:id="@+id/Main_btn_ConfirmarCodigo"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/botao_comum"
            android:gravity="center"
            android:onClick="telaCardapio"
            android:text="@string/main_btn_digitar_codigo"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/Main_text_Link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:onClick="telaLogin"
            android:text="@string/main_link"
            android:textColor="@color/colorTextPrimary" />
    </LinearLayout>
</ScrollView>
