<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundActivity"
    tools:context=".ui.RecuperarSenhaActivity">

    <TextView
    android:id="@+id/RecuperarSenha_text_Titulo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/recuperar_senha_titulo"
    android:gravity="center"
    android:textColor="@color/colorTextPrimary"
    android:textSize="40dp"
    android:layout_marginTop="50dp"
    />

    <TextView
        android:id="@+id/RecuperarSenha_text_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_senha_campo_email"
        android:textColor="@color/colorTextPrimary"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        />

    <EditText
        android:id="@+id/RecuperarSenha_editText_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/plain_text_comum"
        android:textSize="20dp"
        android:ems="10"
        android:hint="Digite Email"
        android:inputType="textPersonName"
        />

    <Button
        android:id="@+id/RecuperarSenha_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/botao_comum"
        android:text="@string/recuperar_senha_btn"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/RecuperarSenha_text_Texto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_senha_texto"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/colorTextPrimary"
        />

</LinearLayout>