<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azulClaro"
    tools:context=".ui.AlterarSenhaActivity">

    <TextView
        android:id="@+id/AlterarSenha_text_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alterar_senha_titulo"
        android:gravity="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="40dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/AlterarSenha_text_Nova"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alterar_senha_senha"
        android:textColor="@color/colorTextPrimary"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        />

    <EditText
        android:id="@+id/AlterarSenha_editText_Nova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/plain_text_comum"
        android:textSize="20dp"
        android:ems="10"
        android:hint="Digite sua nova senha"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/AlterarSenha_text_ConfirmarNova"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alterar_senha_confirmar_senha"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/colorTextPrimary"
        />

    <EditText
        android:id="@+id/AlterarSenha_editText_ConfirmarNova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/plain_text_comum"
        android:textSize="20dp"
        android:ems="10"
        android:hint="Digite a senha novamente"
        android:inputType="textPersonName"
        />


    <Button
        android:id="@+id/AlterarSenha_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/botao_comum"
        android:text="@string/alterar_senha_btn"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        />

</LinearLayout>